--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,5 +9,6 @@
 @use './modules/about';
 @use './modules/bg';
 @use './modules/projects';
+@use './modules/contact';
 // single project styles
 @use './modules/single-images';
