--- a/scss/modules/_bg.scss
+++ b/scss/modules/_bg.scss
@@ -13,18 +13,9 @@
 .bg-animation {
     position: fixed;
     top: 0;
-    left: 0;
+    left: -50%;
     width: 100%;
     height: 100%;
-}
-
-.bg-animation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
 }
 
 #stars {
