--- a/scss/modules/_body.scss
+++ b/scss/modules/_body.scss
@@ -16,6 +16,11 @@ body {
     justify-content: center;
     align-items: center;
 
+    // scss for the floating platform
+    // perspective: 75em;
+    // perspective-origin: 50% calc(50% - 5em);
+    // transform-style: preserve-3d; 
+
     main {
         width: 95dvw;
         z-index: 50;
@@ -71,8 +76,13 @@ body {
         // width: auto;
     }
 
-    div#about, div#projects {
-        height: 200dvh;
+    div#about {
+        height: 110dvh;
+        margin: 0rem 0rem 2rem 0rem;
+    }
+
+    div#projects {
+        height: 150dvh;
         margin: 0rem 0rem 2rem 0rem;
     }
 
