better mobile styles

--- a/scss/modules/_projects.scss
+++ b/scss/modules/_projects.scss
@@ -13,11 +13,52 @@
         justify-content: center;
         align-items: center;
 
-        #project-1, #project-2, #project-3 {
+        .project {
+
+            margin: 2rem 0rem;
             text-align: center;
+
             img {
-                width: 250px;
+                width: 150px;
+            }
+
+        }
+
+        #project-1, #project-3 {
+            transform: rotate(10deg);
+
+            &:hover {
+                animation: scaleUp 0.3s linear;
+
             }
         }
+
+        #project-2 {
+            transform: rotate(-10deg);
+        }
+    }
+}
+
+// animations for the hover effect
+
+@keyframes scaleUp1 {
+    from {
+        transform: rotate(10deg);
+        transform: scale(1);
+    }
+    to {
+        transform: rotate(0deg);
+        transform: scale(1.5);
+    }
+}
+
+@keyframes scaleUp2 {
+    from {
+        transform: rotate(10deg);
+        transform: scale(1);
+    }
+    to {
+        transform: rotate(0deg);
+        transform: scale(1.5);
     }
 }
