--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,5 +10,5 @@
 @use './modules/bg';
 @use './modules/projects';
 @use './modules/contact';
-// single project styles
-@use './modules/single-images';
+// swiper styles
+@use './modules/swiper';
