--- a/scss/styles.css
+++ b/scss/styles.css
@@ -60,7 +60,7 @@ body h3 {
   font-family: "Pixelify Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 body div#home, body div#contact {
   height: 100dvh;
@@ -363,11 +363,27 @@ nav ul li .material-symbols-outlined {
 
 .arrows-right-div {
   margin: 1rem 0rem;
+  background: -webkit-linear-gradient(0deg, rgb(114, 255, 246) 31%, rgb(255, 65, 206) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradientFlow 5s infinite steps(1);
 }
 .arrows-right-div .arrows-right {
   text-align: center;
 }
 
+@keyframes gradientFlow {
+  0%, 50%, 100% {
+    background: -webkit-linear-gradient(0deg, rgb(114, 255, 246) 31%, rgb(255, 65, 206) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  25%, 75% {
+    background: -webkit-linear-gradient(0deg, rgb(255, 65, 206) 31%, rgb(114, 255, 246) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
 .full-wh {
   position: absolute;
   top: 0px;
@@ -512,6 +528,7 @@ nav ul li .material-symbols-outlined {
   grid-template-columns: repeat(1, 1fr);
   justify-content: center;
   align-items: center;
+  margin-top: 2rem;
 }
 #projects .gallery .project {
   margin: 2rem 0rem;
@@ -520,14 +537,22 @@ nav ul li .material-symbols-outlined {
 #projects .gallery .project img {
   width: 150px;
 }
+#projects .gallery .project i {
+  font-size: 1.5rem;
+}
 #projects .gallery #project-1, #projects .gallery #project-3 {
   transform: rotate(10deg);
 }
 #projects .gallery #project-1:hover, #projects .gallery #project-3:hover {
-  animation: scaleUp 0.3s linear;
+  animation: scaleUp1 0.3s ease-in-out;
+  animation-fill-mode: forwards;
 }
 #projects .gallery #project-2 {
   transform: rotate(-10deg);
+}
+#projects .gallery #project-2:hover {
+  animation: scaleUp2 0.3s ease-in-out;
+  animation-fill-mode: forwards;
 }
 
 @keyframes scaleUp1 {
@@ -542,7 +567,7 @@ nav ul li .material-symbols-outlined {
 }
 @keyframes scaleUp2 {
   from {
-    transform: rotate(10deg);
+    transform: rotate(-10deg);
     transform: scale(1);
   }
   to {
@@ -588,8 +613,18 @@ nav ul li .material-symbols-outlined {
 .swiper .swiper-slide {
   text-align: center;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: space-evenly;
+}
+.swiper .swiper-slide .container {
+  height: auto;
+}
+.swiper .swiper-slide .container p {
+  margin: 2rem 0rem;
+}
+.swiper .swiper-slide i {
+  font-size: 2rem;
+  color: #ACD6F5;
 }
 .swiper .swiper-slide .desktop {
   display: block;
