--- a/scss/modules/_projects.scss
+++ b/scss/modules/_projects.scss
@@ -19,8 +19,26 @@
             margin: 2rem 0rem;
             text-align: center;
 
+            @media (min-width: variables.$breakpoint-big) {
+                margin: 5rem 0rem;
+            }
+
             img {
                 width: 150px;
+                clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+
+                &:hover {
+                    animation: toRectangle 0.3s ease-in-out;
+                    animation-fill-mode: forwards;
+                }
+
+                @media (min-width: variables.$breakpoint-medium) {
+                    width: 250px;
+                }
+
+                @media (min-width: variables.$breakpoint-big) {
+                    width: 350px;
+                }
             }
 
             i {
@@ -31,12 +49,11 @@
 
         #project-1, #project-3 {
             transform: rotate(10deg);
-            // transform: scale(1);
+            z-index: 2;
 
             &:hover {
                 animation: scaleUp1 0.3s ease-in-out;
                 animation-fill-mode: forwards;
-
             }
         }
 
@@ -58,6 +75,7 @@
         transform: rotate(10deg);
         transform: scale(1);
     }
+
     to {
         transform: rotate(0deg);
         transform: scale(1.5);
@@ -69,8 +87,17 @@
         transform: rotate(-10deg);
         transform: scale(1);
     }
+
     to {
         transform: rotate(0deg);
         transform: scale(1.5);
+    }
+}
+
+// anim for the images
+
+@keyframes toRectangle {
+    to {
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
     }
 }
