--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -13,7 +13,7 @@
   background: -webkit-linear-gradient(0deg, rgba(114,255,246,1) 31%, rgba(255,65,206,1) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: gradientFlow 5s infinite steps(1);
+  animation: gradientFlow 5s infinite linear;
 
 
   .arrows-right {
