--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -72,9 +72,9 @@ $speed: 20s;
   clip-path: polygon(0 0, 100% 0, 93.25% 100%, 6.75% 100%);
   // background-color: rgba(0, 0, 0, 0.733);
   overflow: hidden;
-  animation: panalRotate $speed*3 infinite linear;
+  animation: panelRotate $speed*3 infinite linear;
 
-  @keyframes panalRotate {
+  @keyframes panelRotate {
 
     0%, 100% { opacity: 1; }
     50% { opacity: 0.1; }
@@ -108,6 +108,10 @@ $speed: 20s;
       0 0 15px #0af,
       0 0 30px #0af;
     animation: textMove $speed infinite linear;
+
+    @media (min-width: variables.$breakpoint-small) {
+      font-size: 2.5em;
+    }
   }
 
   @keyframes textMove {
