--- a/scss/modules/_swiper.scss
+++ b/scss/modules/_swiper.scss
@@ -12,18 +12,28 @@
     max-height: 80dvh;
     max-width: 85dvw;
 	margin: 2rem 0rem;
-    
+
+	@media (min-width: variables.$breakpoint-big) {
+		max-height: 50dvh;
+		max-width: 50dvw;
+	}
+     
     .swiper-slide {
         text-align: center;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: space-evenly;
 
 		.container {
 			height: auto;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+			align-content: space-evenly;
 
 			p {
 				margin: 2rem 0rem;
+				i {
+					margin: 0rem 1rem;
+				}
+
 			}
 
 		}
@@ -33,21 +43,6 @@
 			color: variables.$link-color;
 		}
 
-        .desktop {
-        display: block;
-        width: auto;
-        height: 350px;
-        object-fit: cover;
-        }
-
-        .mobile {
-            height: 450px;
-            width: auto;
-        }
-      }
-
-      .swiper-button-next, .swiper-button-prev {
-        color: white;
       }
 
       box-shadow:
@@ -98,5 +93,77 @@
 		0 calc(var(--pixel) * 12) 0 calc(var(--pixel) * -4) var(--pixel-border-3),
 		0 calc(var(--pixel) * -15) 0 calc(var(--pixel) * -6) var(--pixel-border-3), 
 		0 calc(var(--pixel) * 15) 0 calc(var(--pixel) * -6) var(--pixel-border-3);
+
+}
+
+// swiper on the project pages
+
+.swiper-project {
+	max-height: 80dvh;
+    max-width: 85dvw;
+	margin: 2rem 0rem;
+
+	@media (min-width: variables.$breakpoint-big) {
+		max-height: 50dvh;
+		max-width: 45dvw;
+	}
+
+	.swiper-slide {
+        text-align: center;
+
+		.container {
+			height: auto;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+			align-content: space-evenly;
+
+			p {
+				margin: 2rem 0rem;
+				i {
+					margin: 0rem 1rem;
+				}
+			}
+
+		}
+
+		i {
+			font-size: 2rem;
+			color: variables.$link-color;
+		}
+
+        .desktop {
+        display: block;
+        width: 260px;
+        height: 190px;
+        object-fit: cover;
+
+		@media (min-width: variables.$breakpoint-medium) {
+			height: 350px;
+			width: auto;
+		}
+
+		@media (min-width: variables.$breakpoint-big) {
+			height: 350px;
+			width: 480px;
+		}
+
+    	}
+
+        .mobile {
+            height: 200px;
+            width: auto;
+
+			@media (min-width: variables.$breakpoint-medium) {
+				height: 350px;
+				width: auto;
+			}
+
+			@media (min-width: variables.$breakpoint-big) {
+				height: 350px;
+				width: auto;
+			}
+        }
+      }
 
 }
